--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Django==1.11.15
 Pillow==5.3.0
 boto3==1.9.68
 botocore==1.12.68
-chardet==2.2.1
+certifi==2018.11.29
+chardet==3.0.4
 colorama==0.2.5
 dj-database-url==0.5.0
 django-forms-bootstrap==3.1.0
@@ -10,13 +11,15 @@ django-storages==1.7.1
 docutils==0.14
 gunicorn==19.9.0
 html5lib==0.999
+idna==2.8
 jmespath==0.9.3
 psycopg2==2.7.6.1
 pycurl==7.19.3
 python-dateutil==2.7.5
 pytz==2018.7
-requests==2.2.1
+requests==2.21.0
 s3transfer==0.1.13
 six==1.5.2
+stripe==2.17.0
 wheel==0.24.0
 whitenoise==4.1.2
